@@ -225,6 +225,7 @@ options include:
 \item \ident{-help} : Print basic usage information and exit.
 \item \ident{-version} : Print program and library version information and exit.
 \item \ident{-label} $filename$ : Load volume labels from the given file in \ident{.mnc} or \ident{.tag} format.
+\item \ident{-vertex} $filename$ : Load per-vertex statistics from the given file and associate it with the most recently loaded surface. Data must be in \ident{.vertstats}, \ident{.csv}, \ident{.tsv}, or \ident{.txt} format.
 \item \ident{-skiperror} : Ignore errors encountered when loading files from the command line.
 \item \ident{-ratio} $V_1$,$V_2$ : Display the value of volume number $V_1$
   divided by value of volume number $V_2$ as part of the slice window status. You must load at least two
