@@ -412,6 +412,49 @@ write_globals_to_file( const VIO_STR filename )
 }
 
 /**
+ * Find the most recently loaded polygonal object. It should be inside
+ * the last model on the 3D window's main list of models.
+ * \param display A pointer to the 3D window's display.
+ * \returns NULL on failure, otherwise a valid polygonal object pointer.
+ */
+static object_struct *
+get_most_recent_surface( display_struct *display )
+{
+  model_struct *model_ptr = get_current_model( display );
+  object_struct *result_ptr = NULL;
+  object_struct *object_ptr;
+  int n;
+
+  if ( model_ptr->n_objects <= 1 )
+  {
+    return NULL;
+  }
+
+  /* Get the most recently loaded model. */
+  n = model_ptr->n_objects;
+  while ( --n > 0 && result_ptr == NULL )
+  {
+    object_ptr = model_ptr->objects[n];
+    if ( object_ptr->object_type == MODEL )
+    {
+      int i;
+      model_struct *sub_model_ptr;
+
+      sub_model_ptr = get_model_ptr( object_ptr );
+      for_less (i, 0, sub_model_ptr->n_objects )
+      {
+        if ( sub_model_ptr->objects[i]->object_type == POLYGONS )
+        {
+          result_ptr = sub_model_ptr->objects[i];
+          break;
+        }
+      }
+    }
+  }
+  return result_ptr;
+}
+
+/**
  * Try to make sense out of command-line arguments.
  *
  * \param argc The argument count, from main().
@@ -422,13 +465,12 @@ write_globals_to_file( const VIO_STR filename )
 static void
 parse_options(int argc, char *argv[], display_struct *graphics)
 {
-  VIO_Status retcode;
+  VIO_Status retcode = VIO_OK;
   VIO_STR filename;
-  VIO_BOOL next_is_label_volume;
+  VIO_BOOL next_is_label_volume = FALSE;
+  VIO_BOOL next_is_vertex_file = FALSE;
 
   initialize_argument_processing(argc, argv);
-  retcode = VIO_OK;
-  next_is_label_volume = FALSE;
 
   while (get_string_argument("", &filename))
   {
@@ -443,6 +485,8 @@ parse_options(int argc, char *argv[], display_struct *graphics)
             "Skip on error when parsing arguments or loading file.");
       print("  %-25s %s\n", "-label FILENAME",
             "Interpret FILENAME as a label to be displayed over other images.");
+      print("  %-25s %s\n", "-vertex FILENAME",
+            "Interpret FILENAME as data to be displayed over surfaces.");
       print("  %-25s %s\n", "-labeltags",
             "Input tags from the label file.");
       print("  %-25s %s\n", "-output-label FILENAME",
@@ -540,6 +584,15 @@ parse_options(int argc, char *argv[], display_struct *graphics)
         retcode = VIO_ERROR;
       }
       next_is_label_volume = TRUE;
+    }
+    else if (equal_strings(filename, "-vertex"))
+    {
+      if (next_is_vertex_file)
+      {
+        print("Ignoring extraneous -vertex\n");
+        retcode = VIO_ERROR;
+      }
+      next_is_vertex_file = TRUE;
     }
     else if (equal_strings(filename, "-labeltags"))
     {
@@ -641,26 +694,45 @@ parse_options(int argc, char *argv[], display_struct *graphics)
 
         initialize_cache();
 
-        colour_string = strchr( filename, ':');
-        if (colour_string != NULL)
+        if (next_is_vertex_file)
         {
-          *colour_string++ = 0;
-          if (string_to_colour( colour_string, &default_colour ) != VIO_OK)
+          object_struct *object = get_most_recent_surface( graphics );
+          if ( object == NULL )
           {
+            print("Can't load vertex data before a surface!\n");
+            retcode = VIO_ERROR;
+          }
+          else if (load_vertex_data_file( graphics, object, filename ) != VIO_OK)
+          {
+            print("Error loading %s\n", filename);
+            if (Exit_error_load_file)
+              exit(EX_NOINPUT);
+          }
+          next_is_vertex_file = FALSE;
+        }
+        else
+        {
+          colour_string = strchr( filename, ':');
+          if (colour_string != NULL)
+          {
+            *colour_string++ = 0;
+            if (string_to_colour( colour_string, &default_colour ) != VIO_OK)
+            {
               print("Colour '%s' not recognized.\n", colour_string );
               default_colour = WHITE;
+            }
           }
-        }
 
-        if (load_graphics_file_with_colour(graphics, filename, 
-                                           next_is_label_volume,
-                                           default_colour) != VIO_OK)
-        {
-          print("Error loading %s\n", filename);
-          if (Exit_error_load_file)
-            exit(EX_NOINPUT);
+          if (load_graphics_file_with_colour(graphics, filename, 
+                                             next_is_label_volume,
+                                             default_colour) != VIO_OK)
+          {
+            print("Error loading %s\n", filename);
+            if (Exit_error_load_file)
+              exit(EX_NOINPUT);
+          }
+          next_is_label_volume = FALSE;
         }
-        next_is_label_volume = FALSE;
       }
     }
   }
